20210215	Implementing the fadd.dss 88K instruction, and working a bit
		more on the exception cases in the xmem instruction.
20210220	Implementing mouse emulation support for the LUNA88K machine.
		Updating OpenBSD/sgi install instructions (6.5 -> 6.8),
		and including a screenshot of X11 running.
20210221	Handle return values from interrupted select() when checking
		for available console input. (Found when using CTRL-C on Linux
		to enter the debugger command line, and noticed that it was
		spuriously broken.)
20210222	Basic multiprocessor bootup of OpenBSD/luna88k now works, but
		it is slightly unstable.

==============  RELEASE 0.6.3.1  ==============

20210228	Switching back from C++ to plain C.
		Implementing a helper method for registering device addresses
		as symbols (so that it can be used from several machines).
20210307	Subtle colorized output when stdin/stdout are connected to a
		tty, to make it quicker to interpret text output. Enabled with
		-G or by setting the CLICOLOR environment variable. Can be
		disabled with -A.
20210309	Beginning to separate debug messages into subsystems, that have
		individual verbosity levels.
		Making -K work more consistently (enter the debugger at the
		end of a run). -V implies -K.
		Making -T work better for M88K (breaking into the debugger
		directly on bad memory accesses, if -K is used).
20210310	All MIPS machines now register their devices as symbols (based
		in kseg1, i.e. 0xffffffffa0000000).
20210311	Making -T work better for MIPS, PPC, ARM, and SuperH.
20210314	Adding a -L command line option for enabling tap networking
		without using configuration files.
		-x is now needed if one wants separate xterm windows for serial
		I/O when using configuration files with a single machine.
20210316	debugmsg subsystems can now be registered at runtime; this is
		so far done from the Lance Ethernet device.
		Adding a 'verbosity' debugger command for inspecting and
		setting the verbosity level for individual subsystems.